2005-06-25  Karine Delvare  <kdelvare@nerim.net>

	* authors.xml: added Akkana Peck to contributors and updated my
	last name.
	
	* po/fr.po: fixed typo.

2005-06-25  Karine Delvare  <kdelvare@cvs.gimp.org>

	* plug-ins/FractalExplorer/FractalExplorer.c: activate fractal on
	double-click rather than select.

2005-06-25  Kevin Cozens  <kcozens@cvs.gimp.org>

	* plug-ins/maze/maze_face.c: First step in changing the UI to match
	the layout suggested in bug #82591.

2005-06-25  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcolordisplayeditor.c: shortened bold labels.

2005-06-24  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/Makefile.am: drop the module suffix from the
	filename of the dynamic libraries.

2005-06-25  Sven Neumann  <sven@gimp.org>

	* app/dialogs/preferences-dialog.c
	* modules/cdisplay_lcms.c: use italic text for info labels.

2005-06-25  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcolordisplayeditor.c: use a GtkVPaned.

2005-06-25  Sven Neumann  <sven@gimp.org>

	* modules/cdisplay_lcms.c (cdisplay_lcms_configure): show the names
	of the color profiles that are used.

2005-06-24  Tor Lillqvist  <tml@novell.com>

	* app/display/gimpcanvas.h: Add new GimpCanvasStyle value,
	GIMP_CANVAS_STYLE_XOR_DOTTED.

	* app/display/gimpcanvas.c (gimp_canvas_gc_new): Implement it like
	GIMP_CANVAS_STYLE_XOR_DASHED, except that we set the dash pattern
	to a single-pixel on-off one.

	* app/tools/gimpdrawtool.c (gimp_draw_tool_draw_boundary): Sort
	the boundary so that we can draw each connected group of segments
	using gimp_canvas_draw_lines(). (Even if we would still use
	gimp_canvas_draw_segments(), the boundary would have to be sorted
	so that the XOR drawing and GDK_CAP_NOT_LAST cooperate properly.)

	Use GIMP_CANVAS_STYLE_XOR_DOTTED so the outline doesn't look too
	heavy.

	Remove the dubious code snippet that offset some segments by one
	pixel. It didn't do what the comment claimed, and why one would