@@ -1,3 +1,8 @@
+2005-06-25  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/gimpimagepropview.c (gimp_image_prop_view_update):
+	use gimp_enum_get_value() to avoid string duplication.
+
 2005-06-25  Karine Delvare  <kdelvare@nerim.net>
 
 	* authors.xml: added Akkana Peck to contributors and updated my
